kubernetes/apps/security/oauth2-proxy/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-oauth2-proxy
  namespace: security
  annotations:
    external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
    hajimari.io/enable: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: &host "auth.${SECRET_DOMAIN}"
      http:
        paths:
          - pathType: Prefix
            path: "/oauth2"
            backend:
              service:
                name: app-oauth2-proxy
                port:
                  number: 80
  tls:
    - hosts:
        - *host
      secretName: "auth.${SECRET_DOMAIN}-tls"
